[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
[project]
name = dataclass-orm-converter"
version = "0.0.1"
authors = [
  { name="Guy Simmonds" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/guyesimmo/dataclass-orm-converter"
Issues = "https://github.com/guyesimmo/dataclass-orm-converter/issues"